--- a/Page 1/GuittetOlivierPage1.html
+++ b/Page 1/GuittetOlivierPage1.html
@@ -42,16 +42,17 @@
             <img id=fond src="escalade.jpeg">
             <paragraphe class="C">
                 <paragraphe class="C1">
+                    Parcours Personnel:
                     Je m’appelle Guittet Olivier, Je suis née le 17 novembre 2004 à Wissembourg petite ville dans le
-                    nord du Bas-Rhin. J’habite a Soultz sous Foret, village dans le Bas-Rhin.
+                    nord du Bas-Rhin. J’habite a Soultz sous Foret, village dans le Bas-Rhin. J'ai plusieurs Hobbies, la
+                    trompette que je fais depuis l'âge de 8ans, j'aime beaucoup aussi l'histoire et la géopolitique et
+                    bien sur l'électro-technique et l'informatique. J'ai aussi d'autre hobbies qu'on peut découvrir sur la page mes hobbies.
                 </paragraphe>
                 <paragraphe class="C2">
-
-                </paragraphe>
-                <paragraphe class="C3">
                     Parcours scolaire :
                     De la maternelle au Collège j’ai suivi un parcours bilingue ou j’ai obtenu mon brevet en français et
-                    allemand et ma certification de niveau A2 en Allemand. Au Lycée Stanislas à Wissembourg j’ai ensuite
+                    allemand et ma certification de niveau A2 en Allemand au collège de l'outre-forêt. Au Lycée
+                    Stanislas à Wissembourg j’ai ensuite
                     fait
                     une 2nde Euro puis j’ai fait un Bac Technologique STI2D option SIN. En 2022 j’ai obtenu mon Bac avec
                     mention
@@ -76,7 +77,8 @@
                     De la maternelle au Collège j’ai suivi un parcours bilingue ou j’ai obtenu mon brevet en français et
                     allemand et ma certification de niveau A2 en Allemand. Au Lycée Stanislas à Wissembourg j’ai ensuite
                     fait
-                    une 2nde Euro puis j’ai fait un Bac Technologique STI2D option SIN (Spécialité Systèmes d'Information et Numérique). En 2022 j’ai obtenu mon Bac avec
+                    une 2nde Euro puis j’ai fait un Bac Technologique STI2D option SIN (Spécialité Systèmes
+                    d'Information et Numérique). En 2022 j’ai obtenu mon Bac avec
                     mention
                     assez bien et intégrer la formation BUT Réseau et Télécommunications a L’IUT de Colmar.
                 </paragraphe>
@@ -101,7 +103,8 @@
                     De la maternelle au Collège j’ai suivi un parcours bilingue ou j’ai obtenu mon brevet en français et
                     allemand et ma certification de niveau A2 en Allemand. Au Lycée Stanislas à Wissembourg j’ai ensuite
                     fait
-                    une 2nde Euro puis j’ai fait un Bac Technologique STI2D option SIN (s). En 2022 j’ai obtenu mon Bac avec
+                    une 2nde Euro puis j’ai fait un Bac Technologique STI2D option SIN (s). En 2022 j’ai obtenu mon Bac
+                    avec
                     mention
                     assez bien et intégrer la formation BUT Réseau et Télécommunications a L’IUT de Colmar.
                 </paragraphe>
