--- a/Page 1/Page Anglais.html
+++ b/Page 1/Page Anglais.html
@@ -42,15 +42,19 @@
             <img id=fond src="escalade.jpeg">
             <paragraphe class="C">
                 <paragraphe class="C1">
-                    My name is Guittet Olivier, I am born on 17 November 2004 in Wissembourg, a small town in the north
-                    of the Bas-Rhin. I live in Soultz sous Foret, a village in the Bas-Rhin.
+                    Personal background:
+                    My name is Guittet Olivier, I was born on 17 November 2004 in Wissembourg, a small town in the north of the Bas-Rhin.
+                    in the north of the Bas-Rhin. I live in Soultz sous Foret, a village in the Bas-Rhin. I have several hobbies, the
+                    trumpet which I have been playing since I was 8 years old, I also like history and geopolitics and of course
+                    I also like history and geopolitics and of course electro-technology and computers. I also have other hobbies that you can discover on the page my hobbies.
                 </paragraphe>
                 <paragraphe class="C2">
 
                 </paragraphe>
                 <paragraphe class="C3">
                     Academic background :
-                    From kindergarten to secondary school I followed a bilingual pathway where I obtained my brevet in French and
+                    From kindergarten to secondary school I followed a bilingual pathway where I obtained my brevet in
+                    French and
                     German and my A2 certification in German. At the Lycée Stanislas in Wissembourg I then
                     did
                     a 2nde Euro then I did a Bac Technologique STI2D option SIN. In 2022 I obtained my Bac with
