--- a/Page 1/GuittetOlivierPage1.html
+++ b/Page 1/GuittetOlivierPage1.html
@@ -20,6 +20,9 @@
         <li>
             <a href="Page Anglais.html">Mon site Internet(Anglais)</a>
         </li>
+        <li>
+            <a href="https://github.com/Thesee67">GitHub</a>
+        </li>
     </ul>
 
     <article class="b">
@@ -46,7 +49,8 @@
                     Je m’appelle Guittet Olivier, Je suis née le 17 novembre 2004 à Wissembourg petite ville dans le
                     nord du Bas-Rhin. J’habite a Soultz sous Foret, village dans le Bas-Rhin. J'ai plusieurs Hobbies, la
                     trompette que je fais depuis l'âge de 8ans, j'aime beaucoup aussi l'histoire et la géopolitique et
-                    bien sur l'électro-technique et l'informatique. J'ai aussi d'autre hobbies qu'on peut découvrir sur la page mes hobbies.
+                    bien sur l'électro-technique et l'informatique. J'ai aussi d'autre hobbies qu'on peut découvrir sur
+                    la page mes hobbies.
                 </paragraphe>
                 <paragraphe class="C2">
                     Parcours scolaire :
@@ -65,22 +69,15 @@
         <beta class="beta">
             <paragraphe class="D">
                 <paragraphe class="D1">
-                    Je m’appelle Guittet Olivier, Je suis née le 17 novembre 2004 à Wissembourg petite ville dans le
-                    nord du
-                    Bas-Rhin. J’habite a Soultz sous Foret, village dans le Bas-Rhin.
-                </paragraphe>
-                <paragraphe class="D2">
-
-                </paragraphe>
-                <paragraphe class="D3">
-                    Parcours scolaire :
-                    De la maternelle au Collège j’ai suivi un parcours bilingue ou j’ai obtenu mon brevet en français et
-                    allemand et ma certification de niveau A2 en Allemand. Au Lycée Stanislas à Wissembourg j’ai ensuite
-                    fait
-                    une 2nde Euro puis j’ai fait un Bac Technologique STI2D option SIN (Spécialité Systèmes
-                    d'Information et Numérique). En 2022 j’ai obtenu mon Bac avec
-                    mention
-                    assez bien et intégrer la formation BUT Réseau et Télécommunications a L’IUT de Colmar.
+                    J'ai rejoint le But Réseaux et Télécoms car j'ai toujours été intéresser par l'électro-technique et
+                    l'informatique. Mon grand-père était professeur d'électrotechnique et mon père est technicien laser
+                    et depuis que je suis petit je baigne dans l'électro-technique. Au collège je me suis un peu
+                    désintéresser. Puis en Seconde je me suis réintéresser et découvert la programmation en python et c,
+                    dans le même temps j'ai fait des montages électrique basique avec mon Grand-père. Dans la même année
+                    j'ai fait un stage volontaire à Elektronikzentrum de la Bundeswehr à Bad Bergzabern. En première je
+                    je me suis orienté en STI2D et je me suis vraiment intéresser. Puis j'ai décidé de postuler au BUT
+                    RT car la cybersécurité m'intéressais beaucoup et qu'il y avait à la fois de l'électro-technique et
+                    de l'informatique ce que je préfère.
                 </paragraphe>
             </paragraphe>
             <img id=fond src="escalade.jpeg">
@@ -91,22 +88,14 @@
             <img id=fond src="escalade.jpeg">
             <paragraphe class="E">
                 <paragraphe class="E1">
-                    Je m’appelle Guittet Olivier, Je suis née le 17 novembre 2004 à Wissembourg petite ville dans le
-                    nord du
-                    Bas-Rhin. J’habite a Soultz sous Foret, village dans le Bas-Rhin.
-                </paragraphe>
-                <paragraphe class="E2">
-
-                </paragraphe>
-                <paragraphe class="E3">
-                    Parcours scolaire :
-                    De la maternelle au Collège j’ai suivi un parcours bilingue ou j’ai obtenu mon brevet en français et
-                    allemand et ma certification de niveau A2 en Allemand. Au Lycée Stanislas à Wissembourg j’ai ensuite
-                    fait
-                    une 2nde Euro puis j’ai fait un Bac Technologique STI2D option SIN (s). En 2022 j’ai obtenu mon Bac
-                    avec
-                    mention
-                    assez bien et intégrer la formation BUT Réseau et Télécommunications a L’IUT de Colmar.
+                    Objectifs Personnel:
+                    Mes objectifs sont de réussir mes objectifs professionnels mais aussi de passer mon diplome
+                    d'accompagnateur en moyenne montagne. Je voudrais aussi faire de grande randonné comme saint jacques
+                    de compostelle ou encore le GR20. J'aimerais aussi grimper sur la falaise el capitan dans le parc de
+                    Yosemite au Etats-Unis.
+                    Objectifs Professionnel:
+                    Mon premier objectif est d'intégrer l'ICS. Puis ensuite soit de rejoindre une école d'ingénieur avec
+                    une spécialité en cybersécurité soit d'entrer sur le monde du travail.
                 </paragraphe>
             </paragraphe>
             <img id=fond src="escalade.jpeg">
