--- a/Page 1/Page Anglais.html
+++ b/Page 1/Page Anglais.html
@@ -20,6 +20,9 @@
         <li>
             <a href="GuittetOlivierPage1.html">My Website(Français)</a>
         </li>
+        <li>
+            <a href="https://github.com/Thesee67">GitHub</a>
+        </li>
     </ul>
 
     <article class="b">
@@ -43,45 +46,39 @@
             <paragraphe class="C">
                 <paragraphe class="C1">
                     Personal background:
-                    My name is Guittet Olivier, I was born on 17 November 2004 in Wissembourg, a small town in the north of the Bas-Rhin.
-                    in the north of the Bas-Rhin. I live in Soultz sous Foret, a village in the Bas-Rhin. I have several hobbies, the
-                    trumpet which I have been playing since I was 8 years old, I also like history and geopolitics and of course
-                    I also like history and geopolitics and of course electro-technology and computers. I also have other hobbies that you can discover on the page my hobbies.
+                    My name is Guittet Olivier, i was born on 17 November 2004 in Wissembourg, a small town in the north
+                    of the Bas-Rhin.
+                    In the north of the Bas-Rhin. I live in Soultz sous Foret, a village in the Bas-Rhin. I have several
+                    hobbies, the
+                    trumpet which i have been playing since i was 8 years old.
+                    I also like history and geopolitics and of course electro-technology and computers. I also have
+                    other hobbies that you can discover on the page my hobbies.
                 </paragraphe>
                 <paragraphe class="C2">
-
-                </paragraphe>
-                <paragraphe class="C3">
                     Academic background :
-                    From kindergarten to secondary school I followed a bilingual pathway where I obtained my brevet in
+                    From kindergarten to secondary school i followed a bilingual pathway where i obtained my brevet in
                     French and
-                    German and my A2 certification in German. At the Lycée Stanislas in Wissembourg I then
+                    German and my A2 certification in German. At the Lycée Stanislas in Wissembourg i then
                     did
-                    a 2nde Euro then I did a Bac Technologique STI2D option SIN. In 2022 I obtained my Bac with
+                    a 2nde Euro then i did a Bac Technologique STI2D option SIN. In 2022 i obtained my Bac with
                     with honours and joined the BUT Network and Telecommunications course at the IUT in Colmar.
                 </paragraphe>
             </paragraphe>
         </pife>
 
-        <h3>Why did I join the BUT RT?</h3>
+        <h3>Why did i join the BUT RT?</h3>
         <beta class="beta">
             <paragraphe class="D">
                 <paragraphe class="D1">
-                    Je m’appelle Guittet Olivier, Je suis née le 17 novembre 2004 à Wissembourg petite ville dans le
-                    nord du
-                    Bas-Rhin. J’habite a Soultz sous Foret, village dans le Bas-Rhin.
-                </paragraphe>
-                <paragraphe class="D2">
-
-                </paragraphe>
-                <paragraphe class="D3">
-                    Parcours scolaire :
-                    De la maternelle au Collège j’ai suivi un parcours bilingue ou j’ai obtenu mon brevet en français et
-                    allemand et ma certification de niveau A2 en Allemand. Au Lycée Stanislas à Wissembourg j’ai ensuite
-                    fait
-                    2nde Euro puis j’ai fait un Bac Technologique STI2D option SIN. En 2022 j’ai obtenu mon Bac avec
-                    mention
-                    assez bien et intégrer la formation BUT Réseau et Télécommunications a L’IUT de Colmar.
+                    I joined the BUT Networks and Telecoms because i have always been interested in electrical
+                    engineering and computing. My grandfather was an electrical engineering teacher and my father is a
+                    laser technician. I have been immersed in electrical engineering since i was a child. In collège, i
+                    lost interest. Then, in seconde of lycée, i got interested again and discovered programming in
+                    Python and C. At the same time, i did some basic electrical assembly with my grandfather. In the
+                    same year i did a voluntary internship at the Elektronikzentrum of the Bundeswehr in Bad Bergzabern.
+                    I went into STI2D and got really interested. Then i decided to apply to the BUT RT because i was
+                    very interested in cyber security and there was both electrical engineering and computer science,
+                    which i prefer.
                 </paragraphe>
             </paragraphe>
             <img id=fond src="escalade.jpeg">
@@ -92,21 +89,13 @@
             <img id=fond src="escalade.jpeg">
             <paragraphe class="E">
                 <paragraphe class="E1">
-                    Je m’appelle Guittet Olivier, Je suis née le 17 novembre 2004 à Wissembourg petite ville dans le
-                    nord du
-                    Bas-Rhin. J’habite a Soultz sous Foret, village dans le Bas-Rhin.
-                </paragraphe>
-                <paragraphe class="E2">
-
-                </paragraphe>
-                <paragraphe class="E3">
-                    Parcours scolaire :
-                    De la maternelle au Collège j’ai suivi un parcours bilingue ou j’ai obtenu mon brevet en français et
-                    allemand et ma certification de niveau A2 en Allemand. Au Lycée Stanislas à Wissembourg j’ai ensuite
-                    fait
-                    2nde Euro puis j’ai fait un Bac Technologique STI2D option SIN. En 2022 j’ai obtenu mon Bac avec
-                    mention
-                    assez bien et intégrer la formation BUT Réseau et Télécommunications a L’IUT de Colmar.
+                    Personal objectives:
+                    My goals are to succeed in my professional objectives but also to pass my diploma of mountain
+                    leader. I would also like to do some long hikes like Santiago de Compostela or the GR20. I would
+                    also like to climb the El Capitan cliff in Yosemite Park in the USA.
+                    Professional goals:
+                    My first goal is to join the ICS. Then either to join an engineering school with a specialization in
+                    cybersecurity or to enter the working world.
                 </paragraphe>
             </paragraphe>
             <img id=fond src="escalade.jpeg">
