--- a/Page 1/GuittetOlivierPage1.html
+++ b/Page 1/GuittetOlivierPage1.html
@@ -42,7 +42,7 @@
     <bdi>
         <h2>Mon Histoire</h2>
         <pife class="pife">
-            <img id=fond src="escalade.jpeg">
+            <img id=fond src="photo1.jpg">
             <paragraphe class="C">
                 <paragraphe class="C1">
                     Parcours Personnel:
@@ -80,12 +80,12 @@
                     de l'informatique ce que je préfère.
                 </paragraphe>
             </paragraphe>
-            <img id=fond src="escalade.jpeg">
+            <img id=fond src="photo2.jpg">
         </beta>
 
         <h4>Mes Objectfs</h4>
         <Delta class="Delta">
-            <img id=fond src="escalade.jpeg">
+            <img id=photo3 src="escalade.jpeg">
             <paragraphe class="E">
                 <paragraphe class="E1">
                     Objectifs Personnel:
@@ -98,7 +98,7 @@
                     une spécialité en cybersécurité soit d'entrer sur le monde du travail.
                 </paragraphe>
             </paragraphe>
-            <img id=fond src="escalade.jpeg">
+            <img id=photo3 src="escalade.jpeg">
         </Delta>
     </bdi>
 
