--- a/Page 1/Page Anglais.html
+++ b/Page 1/Page Anglais.html
@@ -42,7 +42,7 @@
     <bdi>
         <h2>My History</h2>
         <pife class="pife">
-            <img id=fond src="escalade.jpeg">
+            <img id=fond src="photo1.jpg">
             <paragraphe class="C">
                 <paragraphe class="C1">
                     Personal background:
@@ -81,7 +81,7 @@
                     which i prefer.
                 </paragraphe>
             </paragraphe>
-            <img id=fond src="escalade.jpeg">
+            <img id=fond src="photo2.jpg">
         </beta>
 
         <h4>My Goals</h4>
