--- a/Page 1/GuittetOlivierPage1.html
+++ b/Page 1/GuittetOlivierPage1.html
@@ -85,7 +85,7 @@
 
         <h4>Mes Objectfs</h4>
         <Delta class="Delta">
-            <img id=photo3 src="escalade.jpeg">
+            <img id=photo3 src="photo3.jpg">
             <paragraphe class="E">
                 <paragraphe class="E1">
                     Objectifs Personnel:
@@ -98,7 +98,7 @@
                     une spécialité en cybersécurité soit d'entrer sur le monde du travail.
                 </paragraphe>
             </paragraphe>
-            <img id=photo3 src="escalade.jpeg">
+            <img id=photo3 src="photo4.jpg">
         </Delta>
     </bdi>
 
