--- a/Page 1/Page Anglais.html
+++ b/Page 1/Page Anglais.html
@@ -86,7 +86,7 @@
 
         <h4>My Goals</h4>
         <Delta class="Delta">
-            <img id=fond src="escalade.jpeg">
+            <img id=photo3 src="photo3.jpg">
             <paragraphe class="E">
                 <paragraphe class="E1">
                     Personal objectives:
@@ -98,7 +98,7 @@
                     cybersecurity or to enter the working world.
                 </paragraphe>
             </paragraphe>
-            <img id=fond src="escalade.jpeg">
+            <img id=photo3 src="photo4.jpg">
         </Delta>
     </bdi>
 
