--- a/Page 2/GuittetOlivierPage2.html
+++ b/Page 2/GuittetOlivierPage2.html
@@ -13,20 +13,39 @@
 
         <ul class="menu">
             <li>
-                <a href="../Page 1/GuittetOlivierPage1.html">Mon Site Web</a>
+                <a href="../Page 1/GuittetOlivierPage1.html">Mon site Web</a>
             </li>
             <li>
-                <a href="../Page 1/Page Anglais.html">Mon Site Web (Anglais)</a>
+                <a href="../Page 1/Page Anglais.html">My Web Site</a>
             </li>
-            <li>
-                <a href="#L'Escalade">Escalade</a>
-            </li>
-            <li>
-                <a href="#La Randonné">Randonné</a>
-            </li>
-            <li>
-                <a href="#La Course à Pied">La Course à Pied</a>
-            </li>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="#L'Escalade">Escalade</a></button>
+                <div class="dropdown-content">
+                    <a href="#LeBloc">Le Bloc</a>
+                    <a href="#LaVitesse">La Vitesse</a>
+                    <a href="#LaDifficulté">La Difficulté</a>
+                    <a href="#Grimper">Pourquoi j'aime Grimper ?</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="#La Randonné">La Randonné</a></button>
+                <div class="dropdown-content">
+                    <a href="#La Randonné à la journé:">La Randonné à la journé:</a>
+                    <a href="#La Randonné en itinérance:">La Randonné en itinérance:</a>
+                    <a href="#Pourquoi j'aime faire de la Randonnés:">Pourquoi j'aime faire de la Randonnés:</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn"><a href="#La Course à Pied">La Course à Pied</a></button>
+                <div class="dropdown-content">
+                    <a href="#Le Sprint:">Le Sprint:</a>
+                    <a href="#Le Demi-Fond:">Le Demi-Fond:</a>
+                    <a href="#La Course de Fond:">La Course de Fond:</a>
+                    <a href="#Le Marathon:">Le Marathon:</a>
+                    <a href="#Le Trail:">Le Trail:</a>
+                    <a href="#Le Type de course que je pratique:">Le Type de course que je pratique:</a>
+                </div>
+            </div>
         </ul>
 
         <bdo class="b">
@@ -50,7 +69,7 @@
                 d'escalade: Le Bloc, La Vitesse et La Difficulté.
             </cfo>
             <cfo class="c3">
-                -Le Bloc
+                <a name="LeBloc">- Le Bloc</a>
             </cfo>
             <cfod class="c31">
                 <img id="escalade1" src="escalade1.jpeg" style=" width: 250px ;height: 250px ">
@@ -67,7 +86,7 @@
                 <img id="escalade2" src="escalade2.jpg" style=" width: 250px ;height: 250px ">
             </cfod>
             <cfo class="c3">
-                - La Vitesse
+                <a name="LaVitesse">- La Vitesse</a>
             </cfo>
             <cfo class="c31">
                 <img id="Vitesse1" src="Vitesse1.jpg" style=" width: 250px ;height: 250px ">
@@ -84,7 +103,7 @@
                 <img id="Vitesse2" src="Vitesse2.jpg" style=" width: 250px ;height: 250px ">
             </cfo>
             <cfo class="c3">
-                - La Difficulté
+                <a name="LaDifficulté">- La Difficulté</a>
             </cfo>
             <cfo class="c31">
                 <img id="Difficulté1" src="Difficulté1.jpg" style=" width: 250px ;height: 250px ">
@@ -102,7 +121,7 @@
                 <img id="Difficulté2" src="Difficulté2.jpg" style=" width: 250px ;height: 250px ">
             </cfo>
             <cfo class="c3">
-                - Pourquoi j'aime grimper?
+                <a name="Grimper">- Pourquoi j'aime Grimper ?</a>
             </cfo>
             <cfo class="c31">
                 <img id="escalade" src="escalade.jpeg" style=" width: 250px ;height: 250px ">
@@ -124,7 +143,9 @@
             <dfo class="d1">
                 <a name="La Randonné"> La Randonné</a>
             </dfo>
-            <dfo class="d21">La Randonné à la journé:</dfo>
+            <dfo class="d21">
+                <a name="La Randonné à la journé:">La Randonné à la journé:</a>
+            </dfo>
             <dfo class="d2">
                 <img id="Randonné" src="Randonné2.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
                 <dfo class="d31">
@@ -136,7 +157,9 @@
                 </dfo>
                 <img id="Randonnée" src="Randonné4.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
             </dfo>
-            <dfo class="d21">La Randonné en itinérance:</dfo>
+            <dfo class="d21">
+                <a name="La Randonné en itinérance:">La Randonné en itinérance:</a>
+            </dfo>
             <dfo class="d2">
                 <img id="escalade2" src="randonnée1.JPG" style=" width: 250px ;height: 250px; margin: 10px; ">
                 <dfo class="d31">
@@ -149,14 +172,19 @@
                 </dfo>
                 <img id="Randonné" src="Randonné6.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
             </dfo>
-            <dfo class="d21">Pourquoi j'aime faire de la Randonnés:</dfo>
+            <dfo class="d21">
+                <a name="Pourquoi j'aime faire de la Randonnés:">Pourquoi j'aime faire de la Randonnés:</a>
+            </dfo>
             <dfo class="d2">
                 <img id="Randonné3" src="Randonné3 (1).jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
                 <dfo class="d31">
                     Je randonne depuis que je suis petit se qui fait qu'aujourdhui j'ai fait un grand nombre de randonné
-                    comme le Tour du Mont-Blanc, La Berlinerhohenweg, l'Adlerweg.... J'ai toujours aimé marcher, comme l'escalade et la course
-                    à pied, j'aime prendre l'air, respirer l'air de montagne, admirer des paysages magnifiques mais aussi se fixer des
-                    objectifs de réussir la randonné. Pour les randonnés en itinérance la convivialité et l'acceuil dans les refuges est
+                    comme le Tour du Mont-Blanc, La Berlinerhohenweg, l'Adlerweg.... J'ai toujours aimé marcher, comme
+                    l'escalade et la course
+                    à pied, j'aime prendre l'air, respirer l'air de montagne, admirer des paysages magnifiques mais
+                    aussi se fixer des
+                    objectifs de réussir la randonné. Pour les randonnés en itinérance la convivialité et l'acceuil dans
+                    les refuges est
                     vraiment sympatique.
                 </dfo>
                 <img id="Randonné5" src="Randonné5.jpg" style=" width: 250px ;height: 250px; margin: 10px; ">
@@ -172,8 +200,10 @@
                 le demi-fond, le fond ou le marathon ou encore le Trail.
             </efo>
             <efo class="e3">
+                <efo class="e1">
+                    <a name="Le Sprint:">Le Sprint:</a>
+                </efo>
                 <efo class="e31">
-                    <efo class="e1">Le Sprint:</efo>
                     <img id="Course1" src="Course1.jpeg" style=" width: 300px ;height: 250px ">
                     <efo class="e311">
                         Course sur une courte distance. on distingue deux types de sprint : le sprint court
@@ -181,8 +211,10 @@
                         et le sprint long comme les 200 ou 400m.
                     </efo>
                 </efo>
+                <efo class="e1">
+                    <a name="Le Demi-Fond:">Le Demi-Fond:</a>
+                </efo>
                 <efo class="e32">
-                    <efo class="e1">Le Demi-Fond:</efo>
                     <efo class="e312">
                         Course d'une distance comprise entre 800 et 3 000 mètres. Plus longues que les
                         sprints et plus courtes que les courses de fond. Il existe trois type de course de Demi-Fond: le
@@ -190,16 +222,20 @@
                     </efo>
                     <img id="Course2" src="Course2.jpg" style=" width: 300px ;height: 250px ">
                 </efo>
+                <efo class="e1">
+                    <a name="La Course de Fond:">La Course de Fond:</a>
+                </efo>
                 <efo class="e31">
-                    <efo class="e1">La Course de Fond:</efo>
                     <img id="Course3" src="Course3.jpg" style=" width: 300px ;height: 250px ">
                     <efo class="e311">
                         Qu'on appelle aussi course longue distance ou encore course d'endurance. Il
                         existe trois principaux type: le 5Km, le 10 km et le semi-marathon 21km.
                     </efo>
                 </efo>
+                <efo class="e1">
+                    <a name="Le Marathon:">Le Marathon:</a>
+                </efo>
                 <efo class="e32">
-                    <efo class="e1">Le Marathon: </efo>
                     <efo class="e312">
                         Le Marathon a été crée lors des jeux des Jeux olympiques d'Athènes pour commémorer
                         la légende du messager grec Philippidès, qui aurait parcouru la distance de la ville Marathon à
@@ -209,8 +245,10 @@
                     </efo>
                     <img id="Course4" src="Course4.jpeg" style=" width: 300px ;height: 250px ">
                 </efo>
+                <efo class="e1">
+                    <a name="Le Trail:">Le Trail:</a>
+                </efo>
                 <efo class="e31">
-                    <efo class="e1">Le Trail:</efo>
                     <img id="Couse5" src="Course5.jpeg" style=" width: 300px ;height: 250px ">
                     <efo class="e311">
                         C'est une course qui se pratique sur des chemins ou sur des sentiers. Il existe
@@ -223,7 +261,9 @@
                     </efo>
                 </efo>
                 <efo class="e33">
-                    <efo class="e11">Le Type de course que je pratique:</efo>
+                    <efo class="e11">
+                        <a name="Le Type de course que je pratique:">Le Type de course que je pratique:</a>
+                    </efo>
                     Je pratique principalement trois types de course le demi-fond et
                     surtout le fond et le trail je cours sur des distances qui varie entre 5 et 10km. J'aime courir car
                     on doit toujour se fixer des objectifs mais aussi sa permet de dévelloper le cardiaque, de faire le
